--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
 == README
+This is the capstone project of @catstavi and @lilyfromseattle. The Ada Capstone project represents one month of work to build a full project from scratch.
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+This is a single page rails app that relies on AJAX to create a smooth user experience.
+The app makes API calls to Instagram, Yelp, Google Places, Google Maps, and a keyword extractor service.
